fixed overlap in homepage

--- a/src/routeComponents/Home.css
+++ b/src/routeComponents/Home.css
@@ -67,6 +67,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  margin-top: 100px;
 }
 
 .card-individual {
